examples/tape/inject.txt
> ./cat-lade.yml inject
^printenv TOKEN:
  TOKEN: "file://../sources/config.json?query=.token"
> lade printenv TOKEN
Error: error: unrecognized subcommand 'printenv'

Usage: lade [OPTIONS] [COMMAND]

For more information, try 'help'.

> lade inject --no-mask printenv TOKEN
╭ Info ──────────────────────────────────────────────────╮
